# boundingbox_ros2_to_ros1

./: README.md  project_3d2d.py
ros1_ws/src/: CMakeLists.txt  package.xml
ros1_ws/src/msg/: BoundingBox3D.msg  Point3D.msg
ros2_ws/bounding_box_3d/: CMakeLists.txt  mapping_rules.yaml  package.xml
ros2_ws/bounding_box_3d/msg/: Point3DArray.msg
